part3/3.03/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 5000
      targetPort: 5000
