part3/3.03/manifests/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 5000
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 5000
      - path: /image.jpg
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 5000
      - path: /add-todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 5000
